[package]
name = "mustache_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["full"] } 
flexi_logger = "0.31"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
elasticsearch = "8.19.0-alpha.1"
getset = "0.1"
derive-new = "0.7"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
regex = "1.11"
dotenv = "0.15.0"
toml = "0.8.19"
once_cell = "1.21" 
http = "1.3"
indoc = "2.0"
urlencoding = "2.1"